--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "homepage": "https://github.com/astrocket/pixelscam.me#readme",
   "dependencies": {
+    "antd-mobile": "^2.2.2",
+    "babel-polyfill": "^6.26.0",
     "express": "^4.16.3",
     "next": "^6.1.1",
     "react": "^16.4.1",
