--- a/package.json
+++ b/package.json
@@ -26,14 +26,22 @@
   },
   "homepage": "https://github.com/astrocket/pixelscam.me#readme",
   "dependencies": {
-    "@zeit/next-sass": "^0.2.0",
-    "antd-mobile": "^2.2.2",
-    "babel-polyfill": "^6.26.0",
+    "antd": "^3.8.1",
+    "axios": "^0.18.0",
+    "babel-plugin-import": "^1.8.0",
     "express": "^4.16.3",
-    "next": "^6.1.1",
+    "js-cookie": "^2.2.0",
+    "next": "^6.1.1-canary.5",
     "node-sass": "^4.9.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-unity-webgl": "^7.0.6"
+  },
+  "devDependencies": {
+    "css-loader": "^1.0.0",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "style-loader": "^0.22.1"
   }
 }
